# rust

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml
docs/: AGENTS.md  Arch.md  CLI-CONVERGENCE.zh-CN.md  ISSUE-CHECKLIST.md  PARITY.md  SCOPE.md  SCOPE.zh-CN.md  STATUS.md  Security.md  cli-convergence.md
docs/examples/: filter-repo-rs.toml
filter-repo-rs/: CHANGELOG.md  Cargo.toml
filter-repo-rs/src/: analysis.rs  backup.rs  commit.rs  error.rs  filechange.rs  finalize.rs  git_config.rs  gitutil.rs  lib.rs  main.rs  message.rs  migrate.rs  opts.rs  pathutil.rs  pipes.rs  sanity.rs  stream.rs  tag.rs
filter-repo-rs/tests/: README.md  already_ran_integration.rs  analyze.rs  backup.rs  blobs.rs  blobs_more.rs  cleanup.rs  cli.rs  config.rs  errors.rs  integration.rs  maps.rs  memory.rs  merge.rs  messages.rs  multi_feature.rs  new_sanity_options.rs  no_data_gate.rs  paths.rs  performance.rs  platform.rs  rename.rs  replace.rs  reports.rs  sanity_comprehensive.rs  sanity_quick.rs  sensitive.rs  stream.rs  unit.rs
filter-repo-rs/tests/common/: filter-repo-rs.toml  mod.rs
