[package]
name = "filter-repo-rs"
version = "0.0.1"
edition = "2021"
description = "Prototype of git-filter-repo in Rust: minimal export->filter->import pipeline"
license = "MIT"

[dependencies]
regex = "1"
time = { version = "0.3", features = ["formatting", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7.1.1"
toml = "0.8"
unicode-normalization = "0.1"

[lib]
name = "filter_repo_rs"
path = "src/lib.rs"

[[bin]]
name = "filter-repo-rs"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.8"
filetime = "0.2"
